testdata/invalid/basic_invalid_13.lisp
;;error:4:22-26:unknown type
(module mmio)

(defcolumns (COUNTER :dac))
(defalias CT COUNTER)

(module mmio)
